ng-zorro framework ok

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -69,8 +69,12 @@ nz-header {
   box-shadow: 0 1px 4px rgba(0,21,41,.08);
 }
 
+nz-footer {
+  text-align: center;
+}
 nz-content {
   margin: 24px;
+
 }
 
 .inner-content {
