--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,54 +1,55 @@
 <nz-layout class="app-layout">
-  <nz-sider class="menu-sidebar"
-            nzCollapsible
-            nzWidth="256px"
-            nzBreakpoint="md"
-            [(nzCollapsed)]="isCollapsed"
-            [nzTrigger]="null">
-    <div class="sidebar-logo">
-      <a href="https://ng.ant.design/" target="_blank">
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>曝书</h1>
-      </a>
+  <nz-header>
+
+    <div class="app-header">
+      <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
+          <i class="trigger" nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"></i>
+      </span>
     </div>
-    <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-submenu nzOpen nzTitle="文本分析" nzIcon="dashboard">
-        <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a routerLink="/welcome">首页</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a routerLink="/fileupload">文件上传</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Workplace</a>
-          </li>
-        </ul>
-      </li>
-      <li nz-submenu nzOpen nzTitle="用户管理" nzIcon="form">
-        <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a>用户注册</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </nz-sider>
+
+  </nz-header>
   <nz-layout>
-    <nz-header>
-      <div class="app-header">
-        <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
-            <i class="trigger"
-               nz-icon
-               [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
-            ></i>
-        </span>
+    <nz-sider class="menu-sidebar"
+              nzCollapsible
+              nzWidth="256px"
+              nzBreakpoint="md"
+              [(nzCollapsed)]="isCollapsed"
+              [nzTrigger]="null">
+      <div class="sidebar-logo">
+          <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+          <h1>曝书</h1>
       </div>
-    </nz-header>
+      <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
+        <li nz-submenu nzOpen nzTitle="文本分析" nzIcon="dashboard">
+          <ul>
+            <li nz-menu-item nzMatchRouter>
+              <a routerLink="/welcome">首页</a>
+            </li>
+            <li nz-menu-item nzMatchRouter>
+              <a routerLink="/file-list">文件上传</a>
+            </li>
+            <li nz-menu-item nzMatchRouter>
+              <a>Workplace</a>
+            </li>
+          </ul>
+        </li>
+        <li nz-submenu nzOpen nzTitle="用户管理" nzIcon="form">
+          <ul>
+            <li nz-menu-item nzMatchRouter>
+              <a>用户注册</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nz-sider>
     <nz-content>
       <div class="inner-content">
         <router-outlet></router-outlet>
       </div>
     </nz-content>
   </nz-layout>
+  <nz-footer>Created by 中山大学 <a><b>肖鹏博士团队</b></a> @ 2019 ShenZhen</nz-footer>
 </nz-layout>
+
+
+
