--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,4 @@
-<p>header works!</p>
+<div class="sidebar-logo">
+  <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+  <h1>曝书</h1>
+</div>
