--- a/src/app/pages/file-list/file-list.component.html
+++ b/src/app/pages/file-list/file-list.component.html
@@ -1,39 +1,31 @@
-<div>
-  <nz-table #basicTable [nzData]="listOfData">
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Address</th>
-      <th>Action</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let data of basicTable.data">
-      <td>{{ data.name }}</td>
-      <td>{{ data.age }}</td>
-      <td>{{ data.address }}</td>
-      <td>
-        <a>Action 一 {{ data.name }}</a>
-        <nz-divider nzType="vertical"></nz-divider>
-        <a>Delete</a>
-      </td>
-    </tr>
-    </tbody>
-  </nz-table>
-</div>
+
 
 <div>
-  <nz-upload [(nzFileList)]="fileList" [nzBeforeUpload]="beforeUpload" [nzMultiple]="true" [nzLimit]="10" [nzSize]="1000">
-    <button nz-button class="btnUpload"><i nz-icon nzType="upload"></i><span>上传文件</span></button>
-  </nz-upload>
-  <button nz-button [nzType]="'primary'" [nzLoading]="uploading" (click)="handleUpload()" [disabled]="fileList.length == 0" style="margin-top: 16px" class="btnUpload">
-    {{ uploading ? '正在上传...' : '开始上传' }}
-  </button>
-
-<!--  <div class="clearfix">-->
-<!--    <nz-upload nzAction={{apiUrl}} nzListType="picture" nzMultiple="true" nzLimit="10" nzSize="1000" nzName="files[]">-->
-<!--      <button nz-button><i nz-icon nzType="upload"></i><span>上传文件</span></button>-->
-<!--    </nz-upload>-->
-<!--  </div>-->
+  <nz-card [nzBordered]="false" nzTitle="文件列表" [nzExtra]="extraTemplate">
+    <nz-table #basicTable
+              nzShowPagination
+              nzShowSizeChanger
+              [nzData]="listOfData"
+              nzSize="small"
+              nzFrontPagination="true">
+      <thead>
+      <tr>
+        <th nzShowSort [nzSortKey]=col.field *ngFor="let col of cols">
+          {{col.header}}
+        </th>
+        <th>操作</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let f of basicTable.data">
+        <td *ngFor="let col of cols">
+          {{f[col.field]}}
+        </td>
+        <td><a><i nz-icon nzType="delete"></i> 删除</a></td>
+      </tr>
+      </tbody>
+    </nz-table>
+  </nz-card>
 </div>
+
+
