--- a/src/app/pages/file-list/file-list.component.scss
+++ b/src/app/pages/file-list/file-list.component.scss
@@ -1,10 +1,3 @@
-:host ::ng-deep .upload-list-inline .ant-upload-list-item {
-  float: left;
-  width: 200px;
-  margin-right: 8px;
-}
-
-.btnUpload{
-  margin-top:16px;
-  width: 160px;
+div{
+  margin: 24px;
 }
