--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,5 @@
 <div class="sidebar-logo">
   <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
   <h1>曝书</h1>
+  <h2> v0.1 测试版</h2>
 </div>
