--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -34,39 +34,39 @@
         <li nz-submenu nzTitle="数据分析" nzIcon="dashboard">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">数据透视</a>
+              <a routerLink="/building">数据透视</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">字频统计</a>
+              <a routerLink="/building">字频统计</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">词频统计</a>
+              <a routerLink="/building">词频统计</a>
             </li>
           </ul>
         </li>
         <li nz-submenu nzTitle="特征分析" nzIcon="dashboard">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">TF-IDF分析</a>
+              <a routerLink="/building">TF-IDF分析</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">颜色特征</a>
+              <a routerLink="/building">颜色特征</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">季节特征</a>
+              <a routerLink="/building">季节特征</a>
             </li>
           </ul>
         </li>
         <li nz-submenu nzTitle="词库管理" nzIcon="dashboard">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">分词词库</a>
+              <a routerLink="/building">分词词库</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">特征词库</a>
+              <a routerLink="/building">特征词库</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/###">去停词库</a>
+              <a routerLink="/building">去停词库</a>
             </li>
           </ul>
         </li>
