--- a/src/app/pages/file-manager/file-manager.component.scss
+++ b/src/app/pages/file-manager/file-manager.component.scss
@@ -1,3 +1,24 @@
 div{
   margin: 24px;
 }
+:host ::ng-deep .upload-list-inline .ant-upload-list-item {
+  float: left;
+  width: 200px;
+  margin-right: 8px;
+}
+
+.btnUpload{
+  margin-top:16px;
+  width: 160px;
+}
+
+div{
+  margin: 24px;
+}
+
+p{
+  color:red;
+  font-size: small;
+}
+
+button {margin:4px;}
