--- a/src/app/pages/file-manager/file-manager.component.html
+++ b/src/app/pages/file-manager/file-manager.component.html
@@ -1,6 +1,9 @@
 <div>
   <nz-card [nzBordered]="false" nzTitle="文件管理" [nzExtra]="extraTemplate">
-
+    <button nz-button>上传</button>
+    <button nz-button>查看</button>
+    <button nz-button>删除</button>
+    <nz-divider></nz-divider>
   <app-file-list></app-file-list>
   </nz-card>
 </div>
