--- a/src/app/pages/file-manager/file-manager.component.html
+++ b/src/app/pages/file-manager/file-manager.component.html
@@ -1,8 +1,7 @@
 <div>
   <nz-card [nzBordered]="false" nzTitle="文件管理" [nzExtra]="extraTemplate">
-    <button nz-button>上传</button>
-    <button nz-button>查看</button>
-    <button nz-button>删除</button>
+    <button nz-button><i nz-icon nzType="upload"></i>上传</button>
+    <button nz-button><i nz-icon nzType="delete"></i>删除</button>
     <nz-divider></nz-divider>
   <app-file-list></app-file-list>
   </nz-card>
