--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -17,8 +17,11 @@
 
       <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="this.isCollapsed">
         <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? '首页' : ''" nzSelected nzMatchRouter>
-          <i nz-icon nzType="home"></i>
-          <span routerLink="/welcome">首页</span>
+          <a routerLink="/welcome"><i nz-icon nzType="home"></i>{{isCollapsed ? '' : '首页'}}</a>
+        </li>
+        <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? '测试页面' : ''" nzSelected nzMatchRouter>
+
+          <a routerLink="/test"><i nz-icon nzType="bug"></i>{{isCollapsed ? '' : '测试页面'}}</a>
         </li>
         <li nz-submenu nzTitle="数据管理" nzIcon="folder">
           <ul>
