--- a/src/app/shared/file-list/file-list.component.html
+++ b/src/app/shared/file-list/file-list.component.html
@@ -1,48 +1,50 @@
-      <nz-table #basicTable
-                nzShowPagination
-                [nzData]="listOfData"
-                nzSize="small"
-                >
-        <thead>
-        <tr>
-          <th
-            nzShowCheckbox
-            [(nzChecked)]="isAllDisplayDataChecked"
-            [nzIndeterminate]="isIndeterminate"
-            (nzCheckedChange)="checkAll($event)"
-          ></th>
-          <th [nzSortKey]=col.field *ngFor="let col of cols">
-            {{col.header}}
-          </th>
-          <th>操作</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let row of basicTable.data">
-          <td
-            nzShowCheckbox
-            (nzCheckedChange)="refreshStatus()"
-          ></td>
-          <td *ngFor="let col of cols">
-            {{row[col.field]}}
-          </td>
-          <td>
-            <button nz-button nzType="primary" (click)="showFile(row.id, row.filename )"><i nz-icon nzType="read"></i>查看
-            </button>
-            <button nz-button nzType="danger" nz-popconfirm nzTitle="确定要删除此文件吗？" (nzOnConfirm)="deleteFile(row.id)"><i
-              nz-icon nzType="delete"></i>删除
-            </button>
-          </td>
-        </tr>
-        </tbody>
-      </nz-table>
+<nz-table #basicTable
+          nzShowPagination
+          [nzData]="listOfData"
+          nzSize="small"
+          (nzCurrentPageDataChange)="currentPageDataChange($event)"
+>
+  <thead>
+  <tr>
+    <th
+      nzShowCheckbox
+      [(nzChecked)]="isAllDisplayDataChecked"
+      [nzIndeterminate]="isIndeterminate"
+      (nzCheckedChange)="checkAll($event)"
+    ></th>
+    <th [nzSortKey]=col.field *ngFor="let col of cols">
+      {{col.header}}
+    </th>
+    <th>操作</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let row of basicTable.data">
+    <td
+      nzShowCheckbox
+      [(nzChecked)]="mapOfCheckedId[row.id]"
+      (nzCheckedChange)="refreshStatus()"
+    ></td>
+    <td *ngFor="let col of cols">
+      {{row[col.field]}}
+    </td>
+    <td>
+      <button nz-button nzType="primary" (click)="showFile(row.id, row.filename )"><i nz-icon nzType="read"></i>查看
+      </button>
+      <button nz-button nzType="danger" nz-popconfirm nzTitle="确定要删除此文件吗？" (nzOnConfirm)="deleteFile(row.id)"><i
+        nz-icon nzType="delete"></i>删除
+      </button>
+    </td>
+  </tr>
+  </tbody>
+</nz-table>
 
 
-  <nz-modal [(nzVisible)]="isVisibleFileContent" [nzTitle]="fileName" (nzOnCancel)="handleCancel()"
-            (nzOnOk)="handleOk()" nzWidth="50%" nzFooter=null>
-    <nz-tag nzColor="red">只显示前1000字</nz-tag>
-    <p>{{content}}</p>
-  </nz-modal>
+<nz-modal [(nzVisible)]="isVisibleFileContent" [nzTitle]="fileName" (nzOnCancel)="handleCancel()"
+          (nzOnOk)="handleOk()" nzWidth="50%" nzFooter=null>
+  <nz-tag nzColor="red">只显示前1000字</nz-tag>
+  <textarea>{{content}}</textarea>
+</nz-modal>
 
 <!--<div>-->
 <!--  <nz-modal [(nzVisible)]="isVisibleFileFeature" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()" nzWidth="50%"-->
