--- a/src/app/shared/file-list/file-list.component.scss
+++ b/src/app/shared/file-list/file-list.component.scss
@@ -11,3 +11,13 @@ p.notify{
 nz-tag{
   margin-bottom: 24px;
 }
+
+textarea{
+  position:relative;
+  width: 100%;
+  height: 50vh;
+}
+
+nz-modal{
+  height: 50vh;
+}
