--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,1 +1,9 @@
+<div>
+<nz-breadcrumb>
+  <nz-breadcrumb-item>
+    <a><i nz-icon nzType="home"></i><span>首页</span></a>
+  </nz-breadcrumb-item>
+</nz-breadcrumb>
+</div>
+
 <app-file-upload></app-file-upload>
