--- a/src/app/shared/file-list/file-list.component.html
+++ b/src/app/shared/file-list/file-list.component.html
@@ -29,9 +29,9 @@
       {{row[col.field]}}
     </td>
     <td>
-      <button nz-button nzType="primary" (click)="showFile(row.id, row.filename )"><i nz-icon nzType="read"></i>查看
+      <button nz-button (click)="showFile(row.id, row.filename )"><i nz-icon nzType="read"></i>查看
       </button>
-      <button nz-button nzType="danger" nz-popconfirm nzTitle="确定要删除此文件吗？" (nzOnConfirm)="deleteFile(row.id)"><i
+      <button nz-button nz-popconfirm nzTitle="确定要删除此文件吗？" (nzOnConfirm)="deleteFile(row.id)"><i
         nz-icon nzType="delete"></i>删除
       </button>
     </td>
