--- a/src/app/pages/file-manager/file-manager.component.html
+++ b/src/app/pages/file-manager/file-manager.component.html
@@ -16,7 +16,7 @@
 <div>
   <nz-card nzBordered="false">
     <button nz-button (click)="onFileUpload()"><i nz-icon nzType="upload"></i>上传</button>
-    <button nz-button (click)="onDelete()"><i nz-icon nzType="delete"></i>删除</button>
+<!--    <button nz-button (click)="onDelete()"><i nz-icon nzType="delete"></i>删除</button>-->
     <nz-divider></nz-divider>
   <app-file-list></app-file-list>
   </nz-card>
