--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -36,10 +36,10 @@
         <li nz-submenu nzTitle="特征分析" nzIcon="line-chart">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/building">数据透视</a>
+              <a routerLink="/feature">数据透视</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/building">文本分词</a>
+              <a routerLink="/segment">文本分词</a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/building">字频统计</a>
