--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,9 +1,4 @@
 <div>
-<nz-breadcrumb>
-  <nz-breadcrumb-item>
-    <a><i nz-icon nzType="home"></i><span>首页</span></a>
-  </nz-breadcrumb-item>
-</nz-breadcrumb>
+  <img src="https://w.wallhaven.cc/full/2e/wallhaven-2e6dyg.jpg">
 </div>
 
-<app-file-upload></app-file-upload>
