--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,3 +1,9 @@
 div{
   margin:24px;
+  width:100%;
+  height: 100vh;
+
+  //background-image: url('https://w.wallhaven.cc/full/2e/wallhaven-2e6dyg.jpg');
+  //background-color:#ffffff;
 }
+
