--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -42,7 +42,7 @@
               <a routerLink="/segment">文本分词</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/building">字频统计</a>
+              <a routerLink="/charfreq">字频统计</a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/building">词频统计</a>
