--- a/src/app/pages/frequency-char/frequency-char.component.html
+++ b/src/app/pages/frequency-char/frequency-char.component.html
@@ -25,7 +25,7 @@
 
     <div nz-row>
       <nz-table nz-col nzSpan="4"
-                #basicTable [nzData]="charFreq|keyvalue"
+                #basicTable [nzData]="charFreqArray"
                 nzSize="small">
         <thead>
         <tr>
@@ -36,7 +36,7 @@
         </thead>
         <tbody>
         <tr *ngFor="let data of basicTable.data">
-          <td>{{data.key}}</td>
+          <td>{{data.name}}</td>
           <td>{{data.value}}</td>
         </tr>
         </tbody>
