--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -45,16 +45,16 @@
               <a routerLink="/charfreq">字频统计</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/building">词频统计</a>
+              <a routerLink="/wordfreq">词频统计</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/building">自动摘要</a>
+              <a routerLink="/abstract">自动摘要</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/building">特征词提取</a>
+              <a routerLink="/keywords">提取关键词</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/building">简繁转换</a>
+              <a routerLink="/translate">简繁转换</a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/building">文本聚类</a>
