--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -47,9 +47,9 @@
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/wordfreq">词频统计</a>
             </li>
-            <li nz-menu-item nzMatchRouter>
-              <a routerLink="/abstract">自动摘要</a>
-            </li>
+<!--            <li nz-menu-item nzMatchRouter>-->
+<!--              <a routerLink="/abstract">自动摘要</a>-->
+<!--            </li>-->
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/keywords">提取关键词</a>
             </li>
@@ -57,7 +57,7 @@
               <a routerLink="/translate">简繁转换</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/building">文本聚类</a>
+              <a routerLink="/cluster">文本聚类</a>
             </li>
           </ul>
         </li>
