--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<div class="login-content">
+<nz-card nzTitle="曝书 v0.1 alpha">
+<form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
+  <nz-form-item>
+    <nz-form-control nzErrorTip="Please input your username!">
+      <nz-input-group nzPrefixIcon="user">
+        <input type="text" nz-input formControlName="userName" placeholder="用户名/手机号/电子邮箱" />
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control nzErrorTip="Please input your Password!">
+      <nz-input-group nzPrefixIcon="lock">
+        <input type="password" nz-input formControlName="password" placeholder="密码" />
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control>
+      <label nz-checkbox formControlName="remember">
+        <span>记住我</span>
+      </label>
+      <a class="login-form-forgot">忘记密码？</a>
+      <button nz-button class="login-form-button" [nzType]="'primary'">登录</button>
+      <a>注册新用户</a>
+    </nz-form-control>
+  </nz-form-item>
+</form>
+</nz-card>
+</div>
