--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,14 +2,14 @@
 <nz-card nzTitle="曝书 v0.1 alpha">
 <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
   <nz-form-item>
-    <nz-form-control nzErrorTip="Please input your username!">
+    <nz-form-control nzErrorTip="请填写用户名！">
       <nz-input-group nzPrefixIcon="user">
         <input type="text" nz-input formControlName="userName" placeholder="用户名/手机号/电子邮箱" />
       </nz-input-group>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control nzErrorTip="Please input your Password!">
+    <nz-form-control nzErrorTip="请填写密码！">
       <nz-input-group nzPrefixIcon="lock">
         <input type="password" nz-input formControlName="password" placeholder="密码" />
       </nz-input-group>
