--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -4,7 +4,7 @@
       <span class="header-trigger" (click)="isCollapsed=!isCollapsed">
           <i class="trigger" nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"></i>
       </span>
-      <app-header></app-header>
+      <app-header [userName]="username"></app-header>
     </div>
   </nz-header>
   <nz-layout>
