--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -39,12 +39,16 @@ nz-header {
 }
 
 .app-header {
-  position: relative;
+  //position: relative;
   height: 64px;
   padding: 0;
   background: #fff;
   box-shadow: 0 1px 4px rgba(0,21,41,.08);
   display: flex;
+}
+
+app-header{
+  width: 100%;
 }
 
 nz-footer {
