cors session problem and register component

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,7 +22,7 @@
       </label>
       <a class="login-form-forgot">忘记密码？</a>
       <button nz-button class="login-form-button" [nzType]="'primary'">登录</button>
-      <a>注册新用户</a>
+      <a routerLink="../register">注册新用户</a>
     </nz-form-control>
   </nz-form-item>
 </form>
