--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,4 +1,4 @@
 <div>
-  <img src="https://w.wallhaven.cc/full/j5/wallhaven-j5lqe5.jpg">
+  <img src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3999265867,1564454907&fm=26&gp=0.jpg">
 </div>
 
