fix  file owner

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,6 +5,6 @@
     <h2> v0.1 测试版</h2>
   </div>
   <div class="userinfo">
-    <span>欢迎光临[<a>{{userName}}</a>]</span>
+    <span>欢迎光临[<a>{{userName}}</a>] <button nz-button nzSize="small" nzType="danger" (click)="logout()">退出</button></span>
   </div>
 </div>
