--- a/src/app/pages/cluster/cluster.component.html
+++ b/src/app/pages/cluster/cluster.component.html
@@ -14,15 +14,15 @@
 
 <div>
   <nz-card nzBordered="false">
-    <div nz-row>
-      <div nz-col nzSpan="8">
+    <div>
+      <div>
         <span>聚类数(0~100) ：</span>
         <nz-input-number [(ngModel)]="nCluster" [nzMin]="1" [nzMax]="100" [nzStep]="1"></nz-input-number>
         <span>&nbsp;&nbsp;</span>
         <span>文本关联性阈值(0.0~1.0)：</span>
         <nz-input-number [(ngModel)]="dLimit" [nzMin]="0.0" [nzMax]="1.0" [nzStep]="0.1"></nz-input-number>
       </div>
-      <div nz-col nzSpan="8">
+      <div>
         <button nz-button (click)="setDefault()">恢复默认值</button>
         <button nz-button nzType="primary" (click)="onClick()">执行</button>
       </div>
