--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -74,19 +74,19 @@
 <!--            </li>-->
 <!--          </ul>-->
 <!--        </li>-->
-        <li nz-submenu nzTitle="用户管理" nzIcon="user">
-          <ul>
-            <li nz-menu-item nzMatchRouter>
-              <a>修改个人信息</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>修改密码</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>注销</a>
-            </li>
-          </ul>
-        </li>
+<!--        <li nz-submenu nzTitle="用户管理" nzIcon="user">-->
+<!--          <ul>-->
+<!--            <li nz-menu-item nzMatchRouter>-->
+<!--              <a>修改个人信息</a>-->
+<!--            </li>-->
+<!--            <li nz-menu-item nzMatchRouter>-->
+<!--              <a>修改密码</a>-->
+<!--            </li>-->
+<!--            <li nz-menu-item nzMatchRouter>-->
+<!--              <a>注销</a>-->
+<!--            </li>-->
+<!--          </ul>-->
+<!--        </li>-->
       </ul>
     </nz-sider>
     <nz-content>
