add user manage

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -72,7 +72,7 @@
       <nz-form-item>
         <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="website" nzRequired>工作单位</nz-form-label>
         <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="请输入工作单位!">
-          <input nz-input id="website" formControlName="website" placeholder="website" />
+          <input nz-input id="website" formControlName="website" placeholder="工作单位" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item nz-row class="register-area">
