--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -19,10 +19,10 @@
         <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? '首页' : ''" nzSelected nzMatchRouter>
           <a routerLink="/welcome"><i nz-icon nzType="home"></i>{{isCollapsed ? '' : '首页'}}</a>
         </li>
-<!--        <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? '测试页面' : ''" nzSelected nzMatchRouter>-->
+        <!--        <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? '测试页面' : ''" nzSelected nzMatchRouter>-->
 
-<!--          <a routerLink="/test"><i nz-icon nzType="bug"></i>{{isCollapsed ? '' : '测试页面'}}</a>-->
-<!--        </li>-->
+        <!--          <a routerLink="/test"><i nz-icon nzType="bug"></i>{{isCollapsed ? '' : '测试页面'}}</a>-->
+        <!--        </li>-->
         <li nz-submenu nzTitle="数据管理" nzIcon="folder">
           <ul>
             <li nz-menu-item nzMatchRouter>
@@ -47,9 +47,9 @@
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/wordfreq">词频统计</a>
             </li>
-<!--            <li nz-menu-item nzMatchRouter>-->
-<!--              <a routerLink="/abstract">自动摘要</a>-->
-<!--            </li>-->
+            <!--            <li nz-menu-item nzMatchRouter>-->
+            <!--              <a routerLink="/abstract">自动摘要</a>-->
+            <!--            </li>-->
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/keywords">提取关键词</a>
             </li>
@@ -61,19 +61,32 @@
             </li>
           </ul>
         </li>
-<!--        <li nz-submenu nzTitle="配置管理" nzIcon="profile">-->
-<!--          <ul>-->
-<!--            <li nz-menu-item nzMatchRouter>-->
-<!--              <a routerLink="/building">分词算法</a>-->
-<!--            </li>-->
-<!--            <li nz-menu-item nzMatchRouter>-->
-<!--              <a routerLink="/building">词库定义</a>-->
-<!--            </li>-->
-<!--            <li nz-menu-item nzMatchRouter>-->
-<!--              <a routerLink="/building">去停词库</a>-->
-<!--            </li>-->
-<!--          </ul>-->
-<!--        </li>-->
+        <!--        <li nz-submenu nzTitle="配置管理" nzIcon="profile">-->
+        <!--          <ul>-->
+        <!--            <li nz-menu-item nzMatchRouter>-->
+        <!--              <a routerLink="/building">分词算法</a>-->
+        <!--            </li>-->
+        <!--            <li nz-menu-item nzMatchRouter>-->
+        <!--              <a routerLink="/building">词库定义</a>-->
+        <!--            </li>-->
+        <!--            <li nz-menu-item nzMatchRouter>-->
+        <!--              <a routerLink="/building">去停词库</a>-->
+        <!--            </li>-->
+        <!--          </ul>-->
+        <!--        </li>-->
+        <li nz-submenu nzTitle="数据清洗" nzIcon="profile">
+          <ul>
+            <li nz-menu-item nzMatchRouter>
+              <a routerLink="/building">分词算法</a>
+            </li>
+            <li nz-menu-item nzMatchRouter>
+              <a routerLink="/building">词库定义</a>
+            </li>
+            <li nz-menu-item nzMatchRouter>
+              <a routerLink="/building">去停词库</a>
+            </li>
+          </ul>
+        </li>
         <li nz-submenu nzTitle="用户管理" nzIcon="user">
           <ul>
             <li nz-menu-item nzMatchRouter>
@@ -82,9 +95,9 @@
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/password">修改密码</a>
             </li>
-<!--            <li nz-menu-item nzMatchRouter>-->
-<!--              <a>注销</a>-->
-<!--            </li>-->
+            <!--            <li nz-menu-item nzMatchRouter>-->
+            <!--              <a>注销</a>-->
+            <!--            </li>-->
           </ul>
         </li>
       </ul>
