增加备案信息

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -18,11 +18,14 @@
 
   background: black url("https://img.zcool.cn/community/01b7b75dd5f085a8012129e27214ca.jpg@1280w_1l_2o_100sh.jpg") ;
   background-size: cover;
-  height: 100%;
+  height: calc(100% - 70px);
   width: 100%;
 }
 
 nz-card{
   margin-right: 16vw;
+}
 
+nz-footer{
+  text-align: center;
 }
