--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -58,9 +58,11 @@ nz-footer {
 //  margin: 24px;
 //}
 //
-//.inner-content {
-//  padding: 24px;
-//  //background: #cecece;
-//  //height: 100%;
-//}
+.inner-content {
+  padding: 24px;
+  background: #cecece;
+  height: 100%;
+}
+
+
 
